--- a/index.html
+++ b/index.html
@@ -11,3 +11,30 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	<script type="text/javascript" src="RandomQuoteApp.js"></script>
 </head>
+
+<body>    
+
+	<div class="container-fluid">
+	  <div class = "row text-center">
+	    <h2>Random Quote Generator</h2>
+	  </div>
+	  <div class = "row text-center">
+	    <div class = "col-xs-12 well message">
+		<p id="postQuote">The message will go here</p><br>
+		<p id="author"></p>
+	    </div>
+	  </div>
+	  <div class = "row text-center">
+	    <div class = "col-xs-12">
+	      <button id = "getMessage" class = "btn btn-primary">
+		Get quote
+	      </button>
+	    </div>
+	  </div>
+	</div>
+
+    <!--bootstrap Javascript CDN-->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+</body>
+
+</html>
